compiler/tools/fpp-check/test/port_numbering/implicit_duplicate_connection_at_matched_output_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/implicit_duplicate_connection_at_matched_output_port.fpp:33.7
      c1.pOut -> c2.pIn
      ^
error: implicit duplicate connection at matched port pOut[0]
connection is implied here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/implicit_duplicate_connection_at_matched_output_port.fpp:34.7
      c2.pOut -> c1.pIn[0]
      ^
because of matching specified here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/implicit_duplicate_connection_at_matched_output_port.fpp:10.5
    match pOut with pIn
    ^
conflicting connection is here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/implicit_duplicate_connection_at_matched_output_port.fpp:35.17
      unmatched c1.pOut[0] -> c3.pIn
                ^
